Fixed issue with text not aligning to center on Portfolio Header

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2070,11 +2070,6 @@ _____________________________*/
         display: none;
     }
 
-    .tap-me {
-        display: inline-block;
-        color: #3C3A3A !important;
-    }
-
     #img-circle {
         width: 170px;
         height: 170px;
